# ai_api

./: .aspell.en.pws  .dir-locals.el  .env  .gitignore  README.md  environment_grok.yml  projectDirectoryMap.txt  pyproject.toml  tree.txt
docs/: ADDING_A_NEW_PROVIDER.md  ADDING_A_NEW_PROVIDER_CLIENT.md  ADDING_A_NEW_PROVIDER_DATA_STRUCTURES.md  PYTHON_APPROACHES.md  README_EMBEDDING.md  README_PERSISTANCE.md  README_STREAMING.md  README_TURNBASED.md
grok_client/: __init__.py  xai_async_client.py
grok_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ai_api/: README.md  __init__.py  factory.py
src/ai_api/clients/: __init__.py  base.py
src/ai_api/core/: __init__.py  base_provider.py  client.py  client.pyi  client_factory.py  core_README.md  errors.py  errors.pyi  grok_client.py  grok_client.pyi  grok_error.py  grok_error.pyi  ollama_client.py  request.py  response.py  streaming.py  types.py  xai_client.py
src/ai_api/data_structures/: LLM_types.py  LLM_types.pyi  LLM_types_grok.py  LLM_types_grok.pyi  LLM_types_ollama.py  LLM_types_openai.py  LLM_types_openai.pyi  README_LLM_types.md  __init__.py  __init__.pyi  base_objects.py  data_structures_README.md  db_responses_schema.py  db_responses_schema.pyi  grok.py  grok.pyi  (+4 more)
tests/: conftest.py  createTestDB.sql  createTestDB_schema.sql  demo_reasoning.py  demo_reasoning.pyi  demo_test.py  initialise_dbtest.sh  permissiontestDB.sql  test_factory.py  test_grok_client.py  test_model_use_local.py  test_model_use_remote.py  test_ollama_client.py  test_ollama_options.py  test_persistence.py
(+38 files in other folders)
